syntax = "proto3";

import "data.proto";
import "topic.proto";
import "user.proto";

// Require Go Package
option go_package = "/models";

// Remote Request to Join/Create Remote Transfer
message RemoteCreateRequest {
  SonrFile file = 1;      // File to be transfered
  int32 ttl = 2;          // How Long File will be available
  string fingerprint = 3; // User Signed Fingerprint for Bip39 Words
  string words = 4;       // Bip39 Words for this Transfer
  string sName = 5;
}

// Remote Request to Join Remote Transfer
message RemoteJoinRequest { string link = 1; }

// Response from Remote Create Request
message RemoteCreateResponse {
  bool success = 1;
  string topic = 2; // Returned in format of URL Link
}

// Response from Remote Join Request
message RemoteJoinResponse {
  Status status = 1;
  bool isValid = 2;
  Lobby lobby = 3;

  enum Status {
    None = 0;
    Approved = 1;
    Declined = 2;
    InProgress = 3;
    Complete = 4;
  }
}
